# splunk-connect-for-snmp-traps

./: .flake8  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  DSL-SNMP-EVENTS.md  Dockerfile  NOTICE  README copy.md  README.md  SECURITY.md  config.yaml  entrypoint.sh  poetry.toml  pyproject.toml
.circleci/: config.yml
.github/signatures/version1/: cla.json
.github/workflows/: agreements.yaml  build-test-release.yml  exclude-patterns.txt  review-secrets.yml
lookups/: custom_mib_string_table.csv  mibs_list.csv  sample_mibs_list.csv
splunk/: Dockerfile
splunk_connect_for_snmp_traps/: __init__.py  custom_mib_string_table.csv  mongo.py  snmp_trap_server.py  splunk_connect_for_smnp_trap.py  splunk_connect_for_snmp_traps.py  utilities.py
splunk_connect_for_snmp_traps/manager/: __init__.py  const.py  hec_config.py  hec_sender.py  mib_server_client.py  os_config_utils.py  translator.py  trap_server.py
tests/: Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  mongo_integration_test.py  requirements.txt  test_hec_config.py  test_integration.py  test_intergtration.py  test_os_config_utils.py
tests/perfromance/: config.py  perf.sh  perf_engine.py  run_perf_scripts.sh  run_perf_trap_load.py  run_resources_utilisation.py  send_trap.py  utils.py
