#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "splunk-connect-for-snmp-traps"
version = "0.1.0"
description = "Translate SNMP traps for Splunk Products"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pysnmp = "^4.4.12"
pyyaml = "^6.0"
lxml = "^4.6"
requests = "^2.26.0"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]
#pytest-splunk-addon = "^1.4.0"
pytest = "*"
black = "21.9b0"
coverage = "^6.2"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
sc4snmp-traps = "splunk_connect_for_snmp_traps.snmp_trap_server:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
